@@ -52,6 +52,7 @@
        occurrences of that word in all views. (Stefan)
 - NEW: Offer automatic update and retry if a commit failed due
        to an outdated working copy (Stefan Fuhrmann)
+- NEW: Directly support single file c/o from c/o dialog (Stefan Fuhrmann)
 - BUG: Merged revisions must be counted only once in stats (Stefan Fuhrmann)
 
 Version 1.6.7
